unpackaged/main/default/objects/Quote/fields/Mod_le__c.field-meta.xml
<CustomField>
    <fullName>Mod_le__c</fullName>
    <label>Modèle</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Marque__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>159</fullName>
            </value>
            <value>
                <fullName>159 SW</fullName>
            </value>
            <value>
                <fullName>2008</fullName>
            </value>
            <value>
                <fullName>205</fullName>
            </value>
            <value>
                <fullName>206</fullName>
            </value>
            <value>
                <fullName>220 E</fullName>
            </value>
            <value>
                <fullName>300E</fullName>
            </value>
            <value>
                <fullName>306</fullName>
            </value>
            <value>
                <fullName>307</fullName>
            </value>
            <value>
                <fullName>320D</fullName>
            </value>
            <value>
                <fullName>320E</fullName>
            </value>
            <value>
                <fullName>320S</fullName>
            </value>
            <value>
                <fullName>405</fullName>
            </value>
            <value>
                <fullName>406</fullName>
            </value>
            <value>
                <fullName>407</fullName>
            </value>
            <value>
                <fullName>420E</fullName>
            </value>
            <value>
                <fullName>5008</fullName>
            </value>
            <value>
                <fullName>500S</fullName>
            </value>
            <value>
                <fullName>530D</fullName>
            </value>
            <value>
                <fullName>600SL</fullName>
            </value>
            <value>
                <fullName>605</fullName>
            </value>
            <value>
                <fullName>607</fullName>
            </value>
            <value>
                <fullName>A1</fullName>
            </value>
            <value>
                <fullName>A2</fullName>
            </value>
            <value>
                <fullName>A3</fullName>
            </value>
            <value>
                <fullName>A4</fullName>
            </value>
            <value>
                <fullName>A5</fullName>
            </value>
            <value>
                <fullName>A6</fullName>
            </value>
            <value>
                <fullName>A8</fullName>
            </value>
            <value>
                <fullName>ACTROS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>