unpackaged/main/default/objects/Quote/fields/Modele_Catalogue__c.field-meta.xml
<CustomField>
    <fullName>Modele_Catalogue__c</fullName>
    <label>Modèle utilisé</label>
    <length>255</length>
    <type>Text</type>
</CustomField>