unpackaged/main/default/objects/Quote/fields/Modele_de_devis__c.field-meta.xml
<CustomField>
    <fullName>Modele_de_devis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Modèle de devis</label>
    <type>Checkbox</type>
</CustomField>