unpackaged/main/default/objects/Quote/fields/Modele_Hayon__c.field-meta.xml
<CustomField>
    <fullName>Modele_Hayon__c</fullName>
    <label>Modèle (Hayon)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1/2 HAYON ARRIERE DROIT</fullName>
            </value>
            <value>
                <fullName>1/2 HAYON ARRIERE GAUCHE</fullName>
            </value>
            <value>
                <fullName>A CASSETTE</fullName>
            </value>
            <value>
                <fullName>A COLONNE (Rabattable manuel)</fullName>
            </value>
            <value>
                <fullName>FOURGON 1/2 HAYON</fullName>
            </value>
            <value>
                <fullName>FOURGON HAYON</fullName>
            </value>
            <value>
                <fullName>ISOTHERME</fullName>
            </value>
            <value>
                <fullName>RABATTABLE</fullName>
            </value>
            <value>
                <fullName>RABATTABLE ISOTHERME (classe A)</fullName>
            </value>
            <value>
                <fullName>RETRACTABLE</fullName>
            </value>
            <value>
                <fullName>RETRACTABLE / REPLIABLE</fullName>
            </value>
            <value>
                <fullName>HORS STANDARD - voir Aménagement HAYON</fullName>
            </value>
            <value>
                <fullName>SANS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>