unpackaged/main/default/objects/Quote/fields/Montant_total_assurances__c.field-meta.xml
<CustomField>
    <fullName>Montant_total_assurances__c</fullName>
    <label>Montant total assurance affinitaire</label>
    <summarizedField>Service__c.Prix_total_Assurance__c</summarizedField>
    <summaryFilterItems>
        <field>Service__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Assurance Affinitaire, Assurance Affinitaire - Lecture Seule</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Service__c.Assurance_retenue__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Service__c.Devis__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>