unpackaged/main/default/objects/Quote/fields/N_Parc__c.field-meta.xml
<CustomField>
    <fullName>N_Parc__c</fullName>
    <defaultValue>&#39;.....&#39;</defaultValue>
    <inlineHelpText>Si véhicule de parc</inlineHelpText>
    <label>N° Parc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>