unpackaged/main/default/objects/Quote/fields/Nature_de_produits_transportes__c.field-meta.xml
<CustomField>
    <fullName>Nature_de_produits_transportes__c</fullName>
    <label>Nature de produits transportés</label>
    <length>255</length>
    <type>Text</type>
</CustomField>