unpackaged/main/default/objects/Quote/fields/Niveau_de_rail_d_arrimage_par_face__c.field-meta.xml
<CustomField>
    <fullName>Niveau_de_rail_d_arrimage_par_face__c</fullName>
    <label>Arrimage(s) sup.(Qté par face)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>