unpackaged/main/default/objects/Quote/fields/Nombre_de_KM__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_KM__c</fullName>
    <inlineHelpText>Nombre de KM séparées par un point virgule &quot;;&quot;</inlineHelpText>
    <label>Nombre de KM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>