unpackaged/main/default/objects/Quote/fields/Optios_Produits__c.field-meta.xml
<CustomField>
    <fullName>Optios_Produits__c</fullName>
    <label>Optios Produits</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>