unpackaged/main/default/objects/Quote/fields/Origine_de_produit__c.field-meta.xml
<CustomField>
    <fullName>Origine_de_produit__c</fullName>
    <inlineHelpText>A = Neuf
B = Reconditionné
C = Parc
D = Résilié/Reloué au même client
E = Racheté et loué au même client
F = Fabriqué d&#39;avance</inlineHelpText>
    <label>Origine du produit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>