unpackaged/main/default/objects/Quote/fields/Ouverture_arriere__c.field-meta.xml
<CustomField>
    <fullName>Ouverture_arriere__c</fullName>
    <label>Ouverture arrière (Type)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 PORTE CENTRALE</fullName>
            </value>
            <value>
                <fullName>1 PORTE CENTRALE ARRIERE</fullName>
            </value>
            <value>
                <fullName>1 PORTE D + 1 RAMPE MANUELLE G</fullName>
            </value>
            <value>
                <fullName>2 PORTE ARRIERE</fullName>
            </value>
            <value>
                <fullName>2 PORTES (symétrique)</fullName>
            </value>
            <value>
                <fullName>2 VANTAUX  (ouverture totale - symétrique)</fullName>
            </value>
            <value>
                <fullName>3 VANTAUX  (ouverture totale - 1 crémone)</fullName>
            </value>
            <value>
                <fullName>AUVENT</fullName>
            </value>
            <value>
                <fullName>CADRE ARRIERE 2 VANTAUX</fullName>
                <label>CADRE ARRIÈRE 2 VANTAUX</label>
            </value>
            <value>
                <fullName>CADRE ARRIERE 3 VANTAUX</fullName>
            </value>
            <value>
                <fullName>EASY ACC&#39;AIR</fullName>
            </value>
            <value>
                <fullName>FACE PLEINE</fullName>
            </value>
            <value>
                <fullName>HAYON + AUVENT</fullName>
            </value>
            <value>
                <fullName>HAYON FERMETURE TOTALE</fullName>
            </value>
            <value>
                <fullName>HAYON ISOLE + AUVENT (Classe A)</fullName>
            </value>
            <value>
                <fullName>OUVERTURE 270° (fourgon tolé)</fullName>
            </value>
            <value>
                <fullName>RIDEAU FIT</fullName>
            </value>
            <value>
                <fullName>RIDEAU ISOTHERME RELEVANT ELECTRIQUE (Classe A)</fullName>
            </value>
            <value>
                <fullName>RIDEAU ISOTHERME RELEVANT MANUEL (Classe A)</fullName>
            </value>
            <value>
                <fullName>RIDEAU ISOTHERME RELEVANT PNEUMATIQUE (Classe A)</fullName>
            </value>
            <value>
                <fullName>RIDEAU RELEVANT ELECTRIQUE</fullName>
            </value>
            <value>
                <fullName>RIDEAU RELEVANT MANUEL</fullName>
            </value>
            <value>
                <fullName>RIDEAU RELEVANT MANUEL ALUMINIUM</fullName>
            </value>
            <value>
                <fullName>RIDEAU RELEVANT PNEUMATIQUE</fullName>
            </value>
            <value>
                <fullName>SMARTOPEN</fullName>
            </value>
            <value>
                <fullName>HORS STANDARD - voir aménagements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>