unpackaged/main/default/objects/Quote/fields/Ouverture_laterale__c.field-meta.xml
<CustomField>
    <fullName>Ouverture_laterale__c</fullName>
    <label>Ouverture latérale (Type)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BATTANTE</fullName>
            </value>
            <value>
                <fullName>COULISSANTE</fullName>
            </value>
            <value>
                <fullName>DOUBLE PORTE BATTANTE</fullName>
            </value>
            <value>
                <fullName>MIXTE (PANNEAU D + BACHE G)</fullName>
            </value>
            <value>
                <fullName>MIXTE (PANNEAU G + BACHE D)</fullName>
            </value>
            <value>
                <fullName>PORTE BATTANTE</fullName>
            </value>
            <value>
                <fullName>PORTE BATTANTE (sans rail d&#39;arrimage)</fullName>
            </value>
            <value>
                <fullName>PORTE COULISSANTE (sans rail d&#39;arrimage)</fullName>
            </value>
            <value>
                <fullName>RIDEAU RELEVANT MANUEL ALUMINIUM</fullName>
            </value>
            <value>
                <fullName>SANS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>