unpackaged/main/default/objects/Quote/fields/PAT_Caisse__c.field-meta.xml
<CustomField>
    <fullName>PAT_Caisse__c</fullName>
    <label>PAT (Caisse)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>