unpackaged/main/default/objects/Quote/fields/PAT_Chassis__c.field-meta.xml
<CustomField>
    <fullName>PAT_Chassis__c</fullName>
    <label>PAT (Châssis)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>