unpackaged/main/default/objects/Quote/fields/PAT_Groupe__c.field-meta.xml
<CustomField>
    <fullName>PAT_Groupe__c</fullName>
    <label>PAT (Groupe)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>