unpackaged/main/default/objects/Quote/fields/PAT_Hayon__c.field-meta.xml
<CustomField>
    <fullName>PAT_Hayon__c</fullName>
    <label>PAT (Hayon)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>