unpackaged/main/default/objects/Quote/fields/PAT_Options_retenues__c.field-meta.xml
<CustomField>
    <fullName>PAT_Options_retenues__c</fullName>
    <label>PAT Options retenues</label>
    <summarizedField>Option__c.PAT_Option__c</summarizedField>
    <summaryFilterItems>
        <field>Option__c.Option_retenu__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Option__c.Devis__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>