unpackaged/main/default/objects/Quote/fields/Pays_PropoComm__c.field-meta.xml
<CustomField>
    <fullName>Pays_PropoComm__c</fullName>
    <label>Pays</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PIAT</fullName>
            </value>
            <value>
                <fullName>PIBE - FR</fullName>
            </value>
            <value>
                <fullName>PICH - FR</fullName>
            </value>
            <value>
                <fullName>PICZ</fullName>
            </value>
            <value>
                <fullName>PIES</fullName>
            </value>
            <value>
                <fullName>PIFR</fullName>
            </value>
            <value>
                <fullName>PILU</fullName>
            </value>
            <value>
                <fullName>PIND</fullName>
            </value>
            <value>
                <fullName>PIRL</fullName>
            </value>
            <value>
                <fullName>PITA</fullName>
            </value>
            <value>
                <fullName>PIZA</fullName>
            </value>
            <value>
                <fullName>PIBE - NL</fullName>
            </value>
            <value>
                <fullName>PICH - DE</fullName>
            </value>
            <value>
                <fullName>PICH - IT</fullName>
            </value>
            <value>
                <fullName>PIMA</fullName>
            </value>
            <value>
                <fullName>PIPT</fullName>
            </value>
            <value>
                <fullName>PFUK</fullName>
            </value>
            <value>
                <fullName>PIHU</fullName>
            </value>
            <value>
                <fullName>PIPL</fullName>
            </value>
            <value>
                <fullName>PIBE</fullName>
                <isActive>false</isActive>
                <label>PIBE</label>
            </value>
            <value>
                <fullName>PICH</fullName>
                <isActive>false</isActive>
                <label>PICH</label>
            </value>
            <value>
                <fullName>PIDE</fullName>
                <isActive>false</isActive>
                <label>PIDE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>