unpackaged/main/default/objects/Quote/fields/Pays_Region_PF__c.field-meta.xml
<CustomField>
    <fullName>Pays_Region_PF__c</fullName>
    <formula>TEXT( Opportunity.PaysRegionPF__c )</formula>
    <label>Pays / Région PF</label>
    <type>Text</type>
</CustomField>