unpackaged/main/default/objects/Quote/fields/Penderie__c.field-meta.xml
<CustomField>
    <fullName>Penderie__c</fullName>
    <label>Penderie  / Porte cintre (Type)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BARRE PORTE CINTRES</fullName>
            </value>
            <value>
                <fullName>BI-RAIL ALU</fullName>
            </value>
            <value>
                <fullName>DENT DE LOUP</fullName>
            </value>
            <value>
                <fullName>RAIL FURGOCAR</fullName>
            </value>
            <value>
                <fullName>RAIL TUBULAIRE</fullName>
            </value>
            <value>
                <fullName>RAIL TUBULAIRE INOX DIAM 50 - CHAISE A DROITE</fullName>
            </value>
            <value>
                <fullName>RAIL TUBULAIRE INOX DIAM 50 - CHAISE A GAUCHE</fullName>
            </value>
            <value>
                <fullName>RAIL TUBULAIRE INOX DIAM 60 - CHAISE A DROITE</fullName>
            </value>
            <value>
                <fullName>RAIL TUBULAIRE INOX DIAM 60 - CHAISE A GAUCHE</fullName>
            </value>
            <value>
                <fullName>HORS STANDARD - voir aménagements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>