unpackaged/main/default/objects/Quote/fields/Plancher__c.field-meta.xml
<CustomField>
    <fullName>Plancher__c</fullName>
    <label>Plancher (Type)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ALUMINIUM ANTIDERAPANT</fullName>
            </value>
            <value>
                <fullName>ANTIDERAPANT</fullName>
            </value>
            <value>
                <fullName>AVIATION</fullName>
            </value>
            <value>
                <fullName>BOIS DUR + OMEGAS</fullName>
            </value>
            <value>
                <fullName>CAILLEBOTIS</fullName>
            </value>
            <value>
                <fullName>LISSE</fullName>
            </value>
            <value>
                <fullName>SANS - TRACTEUR</fullName>
            </value>
            <value>
                <fullName>HORS STANDARD - voir aménagements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>