unpackaged/main/default/objects/Quote/fields/Poids_vide_Kg_5__c.field-meta.xml
<CustomField>
    <fullName>Poids_vide_Kg_5__c</fullName>
    <label>Poids à vide (Kg ± 5%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>