unpackaged/main/default/objects/Quote/fields/Porte_faux_arriere_demande__c.field-meta.xml
<CustomField>
    <fullName>Porte_faux_arriere_demande__c</fullName>
    <label>Porte-à-faux arrière demandée</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>