unpackaged/main/default/objects/Quote/fields/Position_de_la_cloison__c.field-meta.xml
<CustomField>
    <fullName>Position_de_la_cloison__c</fullName>
    <label>Cloison (Position)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>