unpackaged/main/default/objects/Quote/fields/Position_Lisse_de_protection__c.field-meta.xml
<CustomField>
    <fullName>Position_Lisse_de_protection__c</fullName>
    <label>Lisse de protection sup. (Haut/plancher)</label>
    <type>TextArea</type>
</CustomField>