unpackaged/main/default/objects/Quote/fields/Position_rail_d_arrimage__c.field-meta.xml
<CustomField>
    <fullName>Position_rail_d_arrimage__c</fullName>
    <label>Arrimage(s) sup.(Hauteur / plancher)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>