unpackaged/main/default/objects/Quote/fields/Position_s_porte_s_lat_rale_s__c.field-meta.xml
<CustomField>
    <fullName>Position_s_porte_s_lat_rale_s__c</fullName>
    <label>Ouverture latérale (Position)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>