unpackaged/main/default/objects/Quote/fields/Positions_des_etageres__c.field-meta.xml
<CustomField>
    <fullName>Positions_des_etageres__c</fullName>
    <label>Etagère (Hauteur / plancher)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>