unpackaged/main/default/objects/Quote/fields/Prix_0_kms__c.field-meta.xml
<CustomField>
    <fullName>Prix_0_kms__c</fullName>
    <label>Prix 0 kms</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>