unpackaged/main/default/objects/Quote/fields/Prix_des_kms_inclus_les_100_kms__c.field-meta.xml
<CustomField>
    <fullName>Prix_des_kms_inclus_les_100_kms__c</fullName>
    <label>Prix des kms inclus (les 100 kms)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>