unpackaged/main/default/objects/Quote/fields/Prix_du_km_supplementaire_les_100_kms__c.field-meta.xml
<CustomField>
    <fullName>Prix_du_km_supplementaire_les_100_kms__c</fullName>
    <label>Prix du km supplémentaire les 100 kms</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>