unpackaged/main/default/objects/Quote/fields/PTAC_kgs__c.field-meta.xml
<CustomField>
    <fullName>PTAC_kgs__c</fullName>
    <label>PTAC (kgs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>