unpackaged/main/default/objects/Quote/fields/PTRA_Kg__c.field-meta.xml
<CustomField>
    <fullName>PTRA_Kg__c</fullName>
    <label>PTRA (Kg)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>