unpackaged/main/default/objects/Quote/fields/Puissance_Moteur__c.field-meta.xml
<CustomField>
    <fullName>Puissance_Moteur__c</fullName>
    <label>Puissance Moteur</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>