unpackaged/main/default/objects/Quote/fields/Puissance_Plateforme__c.field-meta.xml
<CustomField>
    <fullName>Puissance_Plateforme__c</fullName>
    <label>Puissance Plateforme (Kg)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>300 kg</fullName>
            </value>
            <value>
                <fullName>500 kg</fullName>
            </value>
            <value>
                <fullName>750 KGS</fullName>
            </value>
            <value>
                <fullName>1000 KGS</fullName>
            </value>
            <value>
                <fullName>1200 KGS</fullName>
            </value>
            <value>
                <fullName>1500 KGS</fullName>
            </value>
            <value>
                <fullName>2000 KGS</fullName>
            </value>
            <value>
                <fullName>2500 kg</fullName>
            </value>
            <value>
                <fullName>3000 kg</fullName>
            </value>
            <value>
                <fullName>HORS STANDARD - voir Aménagement HAYON</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>