unpackaged/main/default/objects/Quote/fields/Quote_ID__c.field-meta.xml
<CustomField>
    <fullName>Quote_ID__c</fullName>
    <formula>Id</formula>
    <label>Quote_ID</label>
    <type>Text</type>
</CustomField>