unpackaged/main/default/objects/Quote/fields/Rail_Tube__c.field-meta.xml
<CustomField>
    <fullName>Rail_Tube__c</fullName>
    <label>Rail-Tube</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>RAIL ARRIMAGE ACIER 2 FACES D + G</fullName>
                <default>true</default>
                <label>RAIL ARRIMAGE ACIER 2 FACES D + G</label>
            </value>
            <value>
                <fullName>RAIL ARRIMAGE ACIER 3 FACES</fullName>
            </value>
            <value>
                <fullName>RAIL ARRIMAGE ACIER CÔTÉ D</fullName>
            </value>
            <value>
                <fullName>RAIL ARRIMAGE ACIER CÔTÉ G</fullName>
            </value>
            <value>
                <fullName>RAIL ARRIMAGE ACIER FACE AV</fullName>
            </value>
            <value>
                <fullName>RAIL ARRIMAGE ALUMINIUM 2 FACES D + G</fullName>
            </value>
            <value>
                <fullName>RAIL ARRIMAGE ALUMINIUM 2 FACES D + G (Rolls)</fullName>
            </value>
            <value>
                <fullName>RAIL ARRIMAGE ALUMINIUM 3 FACES</fullName>
            </value>
            <value>
                <fullName>RAIL ARRIMAGE ALUMINIUM 3 FACES (Rolls)</fullName>
            </value>
            <value>
                <fullName>RAIL ARRIMAGE ALUMINIUM CÔTÉ D</fullName>
            </value>
            <value>
                <fullName>RAIL ARRIMAGE ALUMINIUM CÔTÉ D (Rolls)</fullName>
            </value>
            <value>
                <fullName>RAIL ARRIMAGE ALUMINIUM CÔTÉ G</fullName>
            </value>
            <value>
                <fullName>RAIL ARRIMAGE ALUMINIUM CÔTÉ G (Rolls)</fullName>
            </value>
            <value>
                <fullName>RAIL ARRIMAGE ALUMINIUM FACE AV</fullName>
            </value>
            <value>
                <fullName>RAIL ARRIMAGE ALUMINIUM FACE AV (Rolls)</fullName>
            </value>
            <value>
                <fullName>RAIL ARRIMAGE BRIKS 2 FACES D + G</fullName>
            </value>
            <value>
                <fullName>RAIL ARRIMAGE BRIKS 3 FACES</fullName>
            </value>
            <value>
                <fullName>RAIL ARRIMAGE BRIKS CÔTÉ D</fullName>
            </value>
            <value>
                <fullName>RAIL ARRIMAGE BRIKS CÔTÉ G</fullName>
            </value>
            <value>
                <fullName>RAIL ARRIMAGE BRIKS FACE AV</fullName>
            </value>
            <value>
                <fullName>RAIL ARRIMAGE INOX 2 FACES D + G</fullName>
            </value>
            <value>
                <fullName>RAIL ARRIMAGE INOX 3 FACES</fullName>
            </value>
            <value>
                <fullName>RAIL ARRIMAGE INOX CÔTÉ D</fullName>
            </value>
            <value>
                <fullName>RAIL ARRIMAGE INOX CÔTÉ G</fullName>
            </value>
            <value>
                <fullName>RAIL ARRIMAGE INOX FACE AV</fullName>
            </value>
            <value>
                <fullName>SANS</fullName>
            </value>
            <value>
                <fullName>TUBE ARRIMAGE 2 FACES D + G</fullName>
            </value>
            <value>
                <fullName>TUBE ARRIMAGE 3 FACES</fullName>
            </value>
            <value>
                <fullName>TUBE ARRIMAGE CÔTÉ D</fullName>
            </value>
            <value>
                <fullName>TUBE ARRIMAGE CÔTÉ G</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>