unpackaged/main/default/objects/Quote/fields/Rail_viande_Qte__c.field-meta.xml
<CustomField>
    <fullName>Rail_viande_Qte__c</fullName>
    <label>Penderie  / Porte cintre (Qté)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>