unpackaged/main/default/objects/Quote/fields/RAL_Cabine__c.field-meta.xml
<CustomField>
    <fullName>RAL_Cabine__c</fullName>
    <label>RAL Cabine</label>
    <length>255</length>
    <type>Text</type>
</CustomField>