unpackaged/main/default/objects/Quote/fields/RAL_Groupe_Frigo__c.field-meta.xml
<CustomField>
    <fullName>RAL_Groupe_Frigo__c</fullName>
    <label>RAL Groupe Frigo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>