unpackaged/main/default/objects/Quote/fields/RAL_Hayon__c.field-meta.xml
<CustomField>
    <fullName>RAL_Hayon__c</fullName>
    <label>RAL Hayon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>