unpackaged/main/default/objects/Quote/fields/Remise_obtenue_Groupe__c.field-meta.xml
<CustomField>
    <fullName>Remise_obtenue_Groupe__c</fullName>
    <label>Remise obtenue (Groupe)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>