unpackaged/main/default/objects/Quote/fields/SalesAreaData__c.field-meta.xml
<CustomField>
    <fullName>SalesAreaData__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Vue commerciale client sur la quelle le devis a été créé.</description>
    <label>Vue Commerciale Client</label>
    <referenceTo>SalesAreaData__c</referenceTo>
    <relationshipLabel>Devis LD</relationshipLabel>
    <relationshipName>QuotesStandards</relationshipName>
    <type>Lookup</type>
</CustomField>