unpackaged/main/default/objects/Quote/fields/Sangle_Qte__c.field-meta.xml
<CustomField>
    <fullName>Sangle_Qte__c</fullName>
    <label>Sangle d’arrimage (Qté)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>