unpackaged/main/default/objects/Quote/fields/Sans_Delegation__c.field-meta.xml
<CustomField>
    <fullName>Sans_Delegation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sans Délégation / Without more discount</label>
    <type>Checkbox</type>
</CustomField>