unpackaged/main/default/objects/Quote/fields/Service_Tarification_liste__c.field-meta.xml
<CustomField>
    <fullName>Service_Tarification_liste__c</fullName>
    <label>Service Tarification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DDT INTERNATIONAL</fullName>
            </value>
            <value>
                <fullName>TARIFICATION PL</fullName>
            </value>
            <value>
                <fullName>TARIFICATION ES</fullName>
            </value>
            <value>
                <fullName>TARIFICATION FR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>