unpackaged/main/default/objects/Quote/fields/Signature_du_loueur__c.field-meta.xml
<CustomField>
    <fullName>Signature_du_loueur__c</fullName>
    <defaultValue>&quot;:&quot;</defaultValue>
    <label>Signature du Loueur</label>
    <type>TextArea</type>
</CustomField>