unpackaged/main/default/objects/Quote/fields/Somme_charges_utiles_des_options__c.field-meta.xml
<CustomField>
    <fullName>Somme_charges_utiles_des_options__c</fullName>
    <description>Somme des charges utiles des options retenues</description>
    <inlineHelpText>Somme des charges utiles des options retenues</inlineHelpText>
    <label>Somme charges utiles des options</label>
    <summarizedField>Option__c.Charge_utile__c</summarizedField>
    <summaryFilterItems>
        <field>Option__c.Option_retenu__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Option__c.Devis__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>